--- a/src/styles/about.scss
+++ b/src/styles/about.scss
@@ -7,6 +7,8 @@
     flex-direction: column;
     align-items: center;
     gap: 4rem;
+    font-size: 1.1rem;
+    line-height: 2rem;
   
     .about-container {
       width: 80%;
