--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -42,6 +42,7 @@
     a {
       color: inherit;
       transition: transform 0.2s;
+      z-index: 999;
 
       &:hover {
         transform: scale(1.2);
